--- a/wayanad.html
+++ b/wayanad.html
@@ -19,7 +19,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/wayanadu-map.png" height="350px" width="500px">
+<img src="images/wayanadu-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -36,15 +36,15 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/bamboo.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/bamboo.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/wayand.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/wayand.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/banasura-sagar-dam03-1567440024.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/banasura-sagar-dam03-1567440024.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
      
  
@@ -70,35 +70,35 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/kuruva.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/kuruva.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Kuruva Island</a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/Edakkal_Caves.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/Edakkal_Caves.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Edakkal Caves</a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/banasura-sagar-dam03-1567440024.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/banasura-sagar-dam03-1567440024.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Banasura sagar Dam</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/pookode.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/pookode.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Pookode Lake </a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/soojipara.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/soojipara.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Soojipara Waterfalls</a></h6>
     </div>
