--- a/trivandrum.html
+++ b/trivandrum.html
@@ -20,7 +20,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/tvm-map.png" height="350px" width="500px">
+<img src="images/tvm-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -38,23 +38,23 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/padmanabhaswamy.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/padmanabhaswamy.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/kovalam.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/kovalam.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/magicplanet.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/magicplanet.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Ponmudi.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
+     <img src="images/Ponmudi.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/KANYAKUMARI.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/KANYAKUMARI.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
  
   </div>
@@ -79,7 +79,7 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/padmanabha.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/padmanabha.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Padmanabhaswamy Temple</a></h6>
       <p class="card-text">The Padmanabhaswamy temple is a Hindu temple located in Thiruvananthapuram. It is considered as the richest place of worship in the world.Across the world, the Sree Padmanabhaswamy Temple is renowned for its beauty and grandeur.</p>
@@ -87,7 +87,7 @@
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/kovalam.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/kovalam.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Kovalam beach</a></h6>
       <p class="card-text">Kovalam is extremely popular among westerners due to shallow waters and low tidal waves.The leisure options at this beach are plenty and diverse. Sunbathing, swimming, herbal body toning massages,cultural programmes and catamaran cruising are some of them.  </p>
@@ -95,7 +95,7 @@
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/Ponmudi.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/Ponmudi.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Ponmudi Hill Station</a></h6>
       <p class="card-text">Flowing through a wilderness area, it has rounded pebbles, cool water, fish, and lush green trees. Some notable tourist attractions located in Ponmudi are Peppara Wildlife Sanctuary, Echo Point and various trekking spots. Mist-laden valleys also draw tourists.</p>
@@ -103,7 +103,7 @@
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/Attukal.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/Attukal.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Attukal bhagavathy temple</a></h6>
       <p class="card-text">The Attukal Bhagavathy Temple is a Hindu religious shrine at Attukal in Kerala. Goddess Bhadrakali is the main deity in this temple. "Attukal Pongala" entered into the Guiness Book of World Records for the largest women gathering festival in the world.</p>
@@ -111,7 +111,7 @@
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/kanakakunnu.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/kanakakunnu.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Kanakakkunnu Palace</a></h6>
       <p class="card-text">The Kanakakunnu Palace is a beautiful architectural specimen which belonged to the Maharajahs of Travancore.Today the palace and its sprawling grounds are the venue for many cultural meetings and programmes.
