--- a/thrissur.html
+++ b/thrissur.html
@@ -13,7 +13,7 @@
   <div class="top">
   <h1> Thrissur </h1>
   <!-- <br> <br>
-  <img src="/images/thrissur.jpg" width="1217px" height="100px"> -->
+  <img src="images/thrissur.jpg" width="1217px" height="100px"> -->
   <br>
   <p>
     The cultural capital of Kerala, the Poorams or temple festivals in Thrissur draw in thousands of people every single year as these carnivals encapsulate every single part of Kerala's rich heritage. These are a hotbed of folk art performances and heritage tours that will give you an in depth look into some of the grandest traditions of the State. From majestic elephants to colourful pulikali processions to the world renowned Thrissur Pooram, there is always a festive atmosphere in the air.The term Thrissur is the abbreviated form of the word "Thrissivaperur" which means the town of the 'Sacred Siva'.  The district is also the abode of several cultural centres like Kerala Kalamandalam, Sahitya Academy and the Sangeetha Nataka Academy. Thrissur is a place one must visit at least once in their lifetime. The people, swaying with the beats of the chenda, shall help you understand the true heart and spirit of Kerala.
@@ -22,7 +22,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/tsr-map.png" height="350px" width="500px">
+<img src="images/tsr-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -40,23 +40,23 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/Onam.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/Onam.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/pooram.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/pooram.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/athirapally2.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/athirapally2.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/chamayam.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
+     <img src="images/chamayam.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Snehatheeram.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/Snehatheeram.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
  
   </div>
@@ -81,7 +81,7 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/Kalamandalam.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/Kalamandalam.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Kerala Kalamandalam</a></h6>
       <p class="card-text">Kerala Kalamandalam, deemed to be University of Art and Culture by the Government of India, is a major center for learning Indian performing arts, especially those that developed in the Southern states of India, with the special emphasis on Kerala.</p>
@@ -89,7 +89,7 @@
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/athirapally.jpeg" class="card-img-top" width="170px" height="155px">
+    <img src="images/athirapally.jpeg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Athirappally waterfalls</a></h6>
       <p class="card-text">Athirappilly Falls, is situated in Thrissur District in Kerala, on the Chalakudy River, which originates from the upper reaches of the Western Ghats at the entrance to the Sholayar ranges. It is the largest waterfall in Kerala, which stands tall at 80 feet.</p>
@@ -97,7 +97,7 @@
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/sneham-min.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/sneham-min.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Snehatheeram</a></h6>
       <p class="card-text">Snehatheeram is a beach in Thrissur District. It lies on the coast of Arabian Sea and attracts domestic tourists in every season. The beach was selected as the best beach tourism destination by the Department of Tourism during the year 2010.</p>
@@ -105,7 +105,7 @@
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/zoo.jpeg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/zoo.jpeg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Zoo&Museum</a></h6>
       <p class="card-text">Thrissur Museum & Zoo is a 13.5-acre zoo that opened in 1885 in a small area called Chembukkavu, in the heart of Thrissur City. It is one of the oldest zoos in the country, and is home to a wide variety of animals, reptiles, and birds.</p>
@@ -113,7 +113,7 @@
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/Vilangankunnu.jpeg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/Vilangankunnu.jpeg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Vilangan hills</a></h6>
       <p class="card-text">Vilangan Hills is a hillock located in Adat Panchayat, near Thrissur city of Kerala state in India. The hill gives a panoramic view of Thrissur city and Thrissur Kole Wetlands from the top. The hill was referred as a Oxygen Jar of Thrissur city. </p>
