--- a/pathanamthitta.html
+++ b/pathanamthitta.html
@@ -22,7 +22,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/pathanam-map.png" height="350px" width="500px">
+<img src="images/pathanam-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -39,15 +39,15 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/konni-image.jpeg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/konni-image.jpeg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/vallasadhya.webp" class="d-block w-100" height="350px" alt="...">
+     <img src="images/vallasadhya.webp" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/adavi.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/adavi.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
   
@@ -74,28 +74,28 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/Sabarimala.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/Sabarimala.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Sabarimala Temple </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/konni.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/konni.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Konni Forest Reserve </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/gavi-eco-tourism-bg-2.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/gavi-eco-tourism-bg-2.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Gavi </a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/Aranmula-Parthasarathy-Temple-e1501770756212.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/Aranmula-Parthasarathy-Temple-e1501770756212.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Aranmula Parthasaradhy Temple </a></h6>
     </div>
