--- a/palakkad.html
+++ b/palakkad.html
@@ -19,7 +19,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/palakkad-map.png" height="350px" width="500px">
+<img src="images/palakkad-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -36,19 +36,19 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/Nelliyampathy_2448.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/Nelliyampathy_2448.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/parambikulam-tiger-reserve-og.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/parambikulam-tiger-reserve-og.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/lion-tailed-macaque_Anuroop-Krishnan1_wucyr9.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/lion-tailed-macaque_Anuroop-Krishnan1_wucyr9.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Malampuzha_dam_in_Palakkad,_Kerala._32.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
+     <img src="images/Malampuzha_dam_in_Palakkad,_Kerala._32.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
    </div>
   
  
@@ -74,35 +74,35 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/Malampuzha Snake Park.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/Malampuzha Snake Park.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Malampuzha Snake Park </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/Malampuzha_dam_in_Palakkad,_Kerala._32.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/Malampuzha_dam_in_Palakkad,_Kerala._32.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Malampuzha Dam</a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/dhoni.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/dhoni.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Dhoni Waterfalls</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/palakkadu.jpeg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/palakkadu.jpeg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Silent Valley </a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/parambikulam-tiger-reserve-og.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/parambikulam-tiger-reserve-og.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Parambikulam Tiger Reserve</a></h6>
     </div>
