--- a/malappuram.html
+++ b/malappuram.html
@@ -21,7 +21,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/malappuram map.png" height="350px" width="500px">
+<img src="images/malappuram map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -38,15 +38,15 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/kottakunnu.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/kottakunnu.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/nedumkayam.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/nedumkayam.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Malappuram-15112019151733.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/Malappuram-15112019151733.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
   
@@ -73,28 +73,28 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/teak.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/teak.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Nilambur Teak Museum </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/Kadalundi_Bird_Sanctuary.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/Kadalundi_Bird_Sanctuary.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Kadalundi Bird Sanctuary </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/thirunavaya.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/thirunavaya.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Thirunavaya </a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/thunchan.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/thunchan.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Thunchan Parambu</a></h6>
     </div>
