--- a/kozhikode.html
+++ b/kozhikode.html
@@ -13,7 +13,7 @@
   <div class="top">
   <h1> Kozhikode </h1>
   <!-- <br> <br>
-  <img src="/images/thrissur.jpg" width="1217px" height="100px"> -->
+  <img src="images/thrissur.jpg" width="1217px" height="100px"> -->
   <br>
   <p> Kozhikode is a coastal city in the south Indian state of Kerala. It was a significant spice trade center and is close to Kappad Beach, where Portuguese explorer Vasco da Gama landed in 1498.  It was the Capital of Malabar during the Zamorin rule 500 years ago and is famous for its centuries-old trade in cotton and spices with Jews, Arabs, Phoenicians and Chinese.The central Kozhikode Beach, overlooked by an old lighthouse, is a popular spot for watching the sunset.Today Kozhikode is one of the best cities in Kerala. Endowed with lush green countrysides, serene beaches, historic sites, wildlife sanctuaries, rivers, and hills, this city enchants both its inhabitants and its guests. With its unique culture and friendly ambiance, Kozhikode is a wondrous destination for all.
       </p>
@@ -21,7 +21,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/kozhikode-map.png" height="350px" width="500px">
+<img src="images/kozhikode-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -39,23 +39,23 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images//kozhikodebeach.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images//kozhikodebeach.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/sea-food.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/sea-food.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Thusharagiri_Waterfalls-1.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/Thusharagiri_Waterfalls-1.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/churam.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
+     <img src="images/churam.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/pazhassi.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/pazhassi.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
  
   </div>
@@ -80,35 +80,35 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/museum.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/museum.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Pazhassi Museum</a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/koyikkod.webp" class="card-img-top" width="170px" height="155px">
+    <img src="images/koyikkod.webp" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Kozhikode Beach</a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/thusharagiri.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/thusharagiri.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Thusharagiri Waterfalls</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/kakkayam.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/kakkayam.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Kakkayam Dam</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/thali.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/thali.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Thali Temple</a></h6>
     </div>
