--- a/kottayam.html
+++ b/kottayam.html
@@ -19,7 +19,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/ktym-map.png" height="350px" width="500px">
+<img src="images/ktym-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -36,15 +36,15 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/kumarakam-resort.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/kumarakam-resort.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Vagamon.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/Vagamon.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/illikkal-kallu.jpg.image.845.440.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/illikkal-kallu.jpg.image.845.440.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
   
  
@@ -70,34 +70,34 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/vaikkom.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/vaikkom.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Vaikkom Mahadeva Temple </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/vagamon.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/vagamon.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Vagamon </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/kumarakam.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/kumarakam.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Kumarakom</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/ilaveezhapoonjira.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/ilaveezhapoonjira.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">ilaveezhapoonchira </a></h6>
     </div>
   </div>
   <div class="card" style="width: 16rem;">
-    <img src="/images/st-alphonsa-shrine-church-and-pilgrim-centre-bharananganam-kottayam-churches-sce0cmdax7.webp" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/st-alphonsa-shrine-church-and-pilgrim-centre-bharananganam-kottayam-churches-sce0cmdax7.webp" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Tomb Of St. Alphonsa</a></h6>
     </div>
