--- a/kollam.html
+++ b/kollam.html
@@ -19,7 +19,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/kollam-map.png" height="350px" width="500px">
+<img src="images/kollam-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -36,19 +36,19 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/ashtamudi-cottages.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/ashtamudi-cottages.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Jatayu2.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/Jatayu2.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/thenmala.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/thenmala.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/munroe.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
+     <img src="images/munroe.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
    </div>
   
  
@@ -74,35 +74,35 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/thangassery.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/thangassery.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Thangassery Light House </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/Jatayu2.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/Jatayu2.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Jatayu Earth's Center</a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/shasthamkotta.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/shasthamkotta.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Shasthamkotta Lake</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/neendakara-port.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/neendakara-port.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Neendakara Port</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/palaruvi.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/palaruvi.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Palaruvi Waterfalls </a></h6>
     </div>
