--- a/kasargod.html
+++ b/kasargod.html
@@ -19,7 +19,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/kasargd-map.png" height="350px" width="500px">
+<img src="images/kasargd-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -36,19 +36,19 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/bekal fort.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/bekal fort.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/anathapuram-lake-temple.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/anathapuram-lake-temple.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Yakshaganam.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/Yakshaganam.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/parappa.jpeg" height="350px" class="d-block w-100" height="345px" alt="...">  
+     <img src="images/parappa.jpeg" height="350px" class="d-block w-100" height="345px" alt="...">  
    </div>
   
  
@@ -74,35 +74,35 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/bekal fort.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/bekal fort.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Bekal Fort </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/Ranipuram.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/Ranipuram.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Ranipuram Fort</a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/Kottancheri hills.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/Kottancheri hills.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Kottancheri Hills</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/hosdurg_fort.jpeg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/hosdurg_fort.jpeg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Hosdurg Fort</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/parappa.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/parappa.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Parappa Wildlife Sanctuary </a></h6>
     </div>
