--- a/kannur.html
+++ b/kannur.html
@@ -13,7 +13,7 @@
   <div class="top">
   <h1> Kannur </h1>
   <!-- <br> <br>
-  <img src="/images/thrissur.jpg" width="1217px" height="100px"> -->
+  <img src="images/thrissur.jpg" width="1217px" height="100px"> -->
   <br>
   <p>
     Kannur is one among the northernmost districts in the south western state of Kerala in India. With the Western Ghats in the east and lakshadweep sea in the west, kannur district is bounded by a wealth of natural beauty. Kannur is blessed with natural beaches, hill stations, rivers, backwaters, historical monuments and religious centres. The district itself which shares much of the natural splendour has been a key contributor to the cultural, religious, political and industrial heritage of the state. In addition, Kannur enjoys the credit of having been the cradle of many a colourful folk art and folk music of Kerala.
@@ -24,7 +24,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/kannur-map.png" height="350px" width="500px">
+<img src="images/kannur-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -41,19 +41,19 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/theyyam2.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/theyyam2.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Muzhappilangad_Drive-in_Beach_2.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/Muzhappilangad_Drive-in_Beach_2.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/peralassery.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/peralassery.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/dharmadam.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
+     <img src="images/dharmadam.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
    </div>
   
  
@@ -79,7 +79,7 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/Arakkal Museum.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/Arakkal Museum.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Arakkal Museum</a></h6>
       <p class="card-text">The Arakkal Museum in Kannur city is one of the most significant and frequently visited attractions of the south that celebrates the memory and grandeur of Kerala's only Muslim royal family- the Arakkal Ali Rajas. This museum is a testimony to the impeccable Muslim architecture and design.</p>
@@ -87,7 +87,7 @@
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/Muzhappilangad_Drive-in_Beach_2.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/Muzhappilangad_Drive-in_Beach_2.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Muzhappilangad beach</a></h6>
       <p class="card-text">The Muzzhapilangad Drive-in Beach at Kannur is one referred to with many superlatives- as the longest drive-in beach in the whole of India, as one of the cleanest beaches of Kannur and most importantly, as one of the best drive-in beaches that the entire Asian continent has to offer.</p>
@@ -95,7 +95,7 @@
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/payyambalam-beach.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/payyambalam-beach.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Payyambalam beach</a></h6>
       <p class="card-text">Payyambalam beach is a beautiful spot located in the district of Kannur. The impeccably unspoilt Payyabalam beach is adorned with sparkling pearls of golden sand and foamy white  waves of the  Arabian Sea. The highlight of  Kannur, it has an  incredibly peaceful and inviting aura.</p>
@@ -103,7 +103,7 @@
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/st_angelo_fort_kannur.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/st_angelo_fort_kannur.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">St Angelo Fort</a></h6>
       <p class="card-text">St Angelo's Fort is one of the most popular attractions of Kannur and for more reasons than one. The polished yet prehistoric structure of this fortress oozes with unadulterated elegance and overwhelming power. Standing ashore in the Arabian sea, it enjoys a panoramic view.</p>
@@ -111,7 +111,7 @@
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/peralassery.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/peralassery.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Peralassery</a></h6>
       <p class="card-text">At a distance of about 15 km from Kannur is the town of Peralassery, known for its Peralassery Subrahmanya Temple. It is believed that on their way to Lanka to free Goddess Sita, Lord Ram and Lord Laxman, stopped at the temple for a while and they left a bangle here.</p>
