--- a/idukki.html
+++ b/idukki.html
@@ -19,7 +19,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/idukki-map.png" height="350px" width="500px">
+<img src="images/idukki-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -36,19 +36,19 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/MUNNAR.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/MUNNAR.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/Statue_of_Kuruvan_&_Kuruthi.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/Statue_of_Kuruvan_&_Kuruthi.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/varayadu.webp" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/varayadu.webp" class="d-block w-100" height="350px" alt="...">   
    </div>
    
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/thommankuthu-waterfalls-thodupuzha-idukki.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
+     <img src="images/thommankuthu-waterfalls-thodupuzha-idukki.jpg" height="350px" class="d-block w-100" height="345px" alt="...">  
    </div>
   
  
@@ -74,35 +74,35 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/dam-idukki.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/dam-idukki.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Idukki Dam </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/eravi.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/eravi.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Eravikulam National Park </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/munnaar.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/munnaar.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Munnar</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/thommankuthu-falls-1612076607.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/thommankuthu-falls-1612076607.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Thommankuthu Waterfalls</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/Chinnar-Wildlife-Sanctuary-6.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/Chinnar-Wildlife-Sanctuary-6.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Chinnar Wildlife sanctuary</a></h6>
     </div>
