--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="login.html">Login</a>
-          <a class="nav-link active" href="signup.html">Sign Up</a>
+          <a class="nav-link active" aria-current="page" href="/login.html">Login</a>
+          <a class="nav-link active" href="/signup.html">Sign Up</a>
           <a class="nav-link active" href="#">Contact</a>
         </div>
       </div>
